# C--_Project-replication

./: .gitignore  README.md  REQUIREMENTS.md
cpp_rebuild_template/: CMakeLists.txt  README.md
cpp_rebuild_template/docs/: 开发路线图.md  技术选型.md  接口设计.md  测试与质量保障.md  需求分析说明书.md
cpp_rebuild_template/include/core/: course_assistant.h
cpp_rebuild_template/include/llm/: llm_client.h  openai_client.h
cpp_rebuild_template/include/server/: http_server.h
cpp_rebuild_template/src/: main.cpp
cpp_rebuild_template/src/core/: course_assistant.cpp
cpp_rebuild_template/src/llm/: llm_client.cpp  openai_client.cpp
cpp_rebuild_template/src/server/: http_server.cpp
cpp_rebuild_template/tests/: test_core.cpp
